--- a/index4.html
+++ b/index4.html
@@ -8,8 +8,34 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Lilita+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     
+    <section>
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class='col-5 background'>
+                    <div class="d-flex justify-content-center py-5">
+                        <img src="assets/img/logo.svg">
+                    </div>
+                    <div id="bloco-login" class="d-flex align-items-center justify-content-between ps-2 pe-2">
+                        <div id="façalogin">
+                            <h1 class='pb-3'>Faça Login</h1>
+                            <div class='barra-azul'></div>
+                            <p>Para acessar o seu painel</p>
+                        </div>
+                        <div id='seta' class="d-flex justify-content-center align-items-center bg-dark rounded-circle text-white fs-1">
+                            >
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 </body>
-</html>
+</html> 
