--- a/index3.html
+++ b/index3.html
@@ -24,13 +24,33 @@
                     </div>
                     <div id="bloco-login" class="d-flex align-items-center justify-content-between ps-2 pe-2">
                         <div id="façalogin">
-                            <h1 class='pb-3'>Faça Login</h1>
+                            <h1 class='pb-3'>Alterar Senha</h1>
                             <div class='barra-azul'></div>
-                            <p>Para acessar o seu painel</p>
+                            <p>Alteração de senha através do e-mail.</p>
                         </div>
                         <div id='seta' class="d-flex justify-content-center align-items-center bg-dark rounded-circle text-white fs-1">
                             >
                         </div>
+                    </div>
+                </div>
+                <div id="informacoes-login" class='col-4 offset-1 d-flex gap-4 flex-column justify-content-center'>
+                    <div id="informacao-email">
+                        <p class="fw-medium" id="e-mail">E-mail</p>
+                        <form action="get">
+                            <input class="w-100" type="text" placeholder="Digite o seu e-mail">
+                        </form>
+                    </div>
+                    <div id="informacao-senha">
+                        <p class="fw-medium" id="senha">Senha</p>
+                        <form action="get">
+                            <input class="w-100" type="password" placeholder="Digite sua senha">
+                            <img id="olho" src="assets/img/olho.svg">
+                        </form>
+                    </div>
+                    <button id='button-form' type="button" class="btn btn-primary fw-bold">Entrar</button>
+                    <div id="cadastrar" class="d-flex justify-content-between w-100">
+                        <p>Não tem uma conta? <a href="#" class="fw-bold">Cadastrar-se</a></p>
+                        <a href="#">Esqueci minha senha</a>
                     </div>
                 </div>
             </div>
