--- a/index.html
+++ b/index.html
@@ -34,6 +34,16 @@
                     </div>
                 </div>
             </div>
+            <div class="row justify-content-end">
+                <div class="col-4">
+                    <div id="informacao-email">
+                        <p id="e-mail">E-mail</p>
+                        <form action="get">
+                            <input class="w-100" type="text" placeholder="Digite o seu e-mail">
+                        </form>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
