--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
                     </div>
                     <div id="bloco-login" class="d-flex align-items-center justify-content-between ps-2 pe-2">
                         <div id="façalogin">
-                            <h1 class='pb-3'>Faça Login</h1>
+                            <h1 class='pb-3'>Alterar Senha</h1>
                             <div class='barra-azul'></div>
-                            <p>Para acessar o seu painel</p>
+                            <p>Alteração de senha através do e-mail.</p>
                         </div>
                         <div id='seta' class="d-flex justify-content-center align-items-center bg-dark rounded-circle text-white fs-1">
                             >
