--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
             </div>
             <div class="row justify-content-end">
                 <div class="col-4">
+                    <div>
+                        <h4 class="fw-bold border-bottom border-light-subtle pb-3">Esqueceu a sua senha?</h4>
+                        <p>Não se preocupe. Vamos ajudar você a recuperá-la. 
+                            Preencha o seu e-mail para continuar com a atualização.</p>
+                    </div>
                     <div id="informacao-email">
                         <p id="e-mail">E-mail</p>
                         <form action="get">
