--- a/index.html
+++ b/index.html
@@ -1,20 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tela de Login</title>
+
+    <!-- bootstrap do projeto -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+
+    <!-- icones do projeto -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
+
+    <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Poppins:wght@400;700&display=swap"
+        rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lilita+One&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Poppins:wght@400;700&display=swap"
+        rel="stylesheet">
+
+    <!-- css do projeto -->
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
-    
+
     <section>
         <div class="container">
             <div class="row justify-content-center">
@@ -22,35 +38,44 @@
                     <div class="d-flex justify-content-center py-5">
                         <img src="assets/img/logo.svg">
                     </div>
-                    <div id="bloco-login" class="d-flex align-items-center justify-content-between ps-2 pe-2">
+                    <div id="bloco-login"
+                        class="d-flex align-items-center justify-content-between ps-2 pe-2 aling-self-center">
                         <div id="façalogin">
-                            <h1 class='pb-3'>Alterar Senha</h1>
+                            <h1 class='pb-3'>Faça Login</h1>
                             <div class='barra-azul'></div>
-                            <p>Alteração de senha através do e-mail.</p>
+                            <p>Para acessar o seu painel</p>
                         </div>
-                        <div id='seta' class="d-flex justify-content-center align-items-center bg-dark rounded-circle text-white fs-1">
+                        <div id='seta'
+                            class="d-flex justify-content-center align-items-center bg-dark rounded-circle text-white fs-1">
                             >
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="row justify-content-end">
-                <div class="col-4">
-                    <div>
-                        <h4 class="fw-bold border-bottom border-light-subtle pb-3">Esqueceu a sua senha?</h4>
-                        <p>Não se preocupe. Vamos ajudar você a recuperá-la. 
-                            Preencha o seu e-mail para continuar com a atualização.</p>
-                    </div>
+                <div id="informacoes-login" class='col-4 offset-1 d-flex gap-4 flex-column justify-content-center'>
                     <div id="informacao-email">
-                        <p id="e-mail">E-mail</p>
+                        <p class="fw-medium" id="e-mail">E-mail</p>
                         <form action="get">
                             <input class="w-100" type="text" placeholder="Digite o seu e-mail">
                         </form>
+                    </div>
+                    <div id="informacao-senha">
+                        <p class="fw-medium" id="senha">Senha</p>
+                        <form action="get" class="senha">
+                            <input class="w-100" type="password" placeholder="Digite sua senha">
+                            <i class="bi bi-eye-slash fs-5"></i>
+                        </form>
+                    </div>
+                    <button id='button-form' type="button" class="btn btn-primary fw-bold">Entrar</button>
+                    <div id="cadastrar" class="d-flex justify-content-between w-100">
+                        <p>Não tem uma conta? <a href="#" class="fw-bold">Cadastrar-se</a></p>
+                        <a href="#">Esqueci minha senha</a>
                     </div>
                 </div>
             </div>
         </div>
     </section>
 
+
 </body>
-</html> 
+
+</html>
