--- a/index2.html
+++ b/index2.html
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+
     <section>
         <div class="container">
             <div class="row justify-content-center">
@@ -24,32 +24,13 @@
                     </div>
                     <div id="bloco-login" class="d-flex align-items-center justify-content-between ps-2 pe-2">
                         <div id="façalogin">
-                            <h1 class='pb-3'>Alterar Senha</h1>
+                            <h1 class='pb-3'>Faça Login</h1>
                             <div class='barra-azul'></div>
-                            <p>Alteração de senha através de link.</p>
+                            <p>Para acessar o seu painel</p>
                         </div>
                         <div id='seta' class="d-flex justify-content-center align-items-center bg-dark rounded-circle text-white fs-1">
                             >
                         </div>
-                    </div>
-                </div>
-                <div id="informacoes-login" class='col-4 offset-1 d-flex gap-4 flex-column justify-content-center'>
-                    <div id="informacao-email">
-                        <p class="fw-medium" id="e-mail">E-mail</p>
-                        <form action="get">
-                            <input class="w-100" type="text" placeholder="Digite o seu e-mail">
-                        </form>
-                    </div>
-                    <div id="informacao-senha">
-                        <p class="fw-medium" id="senha">Senha</p>
-                        <form action="get">
-                            <input class="w-100" type="password" placeholder="Digite sua senha">
-                        </form>
-                    </div>
-                    <button id='button-form' type="button" class="btn btn-primary fw-bold">Entrar</button>
-                    <div id="cadastrar" class="d-flex justify-content-between w-100">
-                        <p>Não tem uma conta? <a href="#" class="fw-bold">Cadastrar-se</a></p>
-                        <a href="#">Esqueci minha senha</a>
                     </div>
                 </div>
             </div>
