iniciando a tela de recuperar senha

--- a/index2.html
+++ b/index2.html
@@ -52,7 +52,7 @@
                     </div>
                 </div>
                 <div id="informacoes-login" class='col-4 offset-1 d-flex gap-4 flex-column justify-content-center'>
-                    
+
                     <div id="informacao-email">
                         <p class="fw-medium" id="e-mail">E-mail</p>
                         <form action="get">
@@ -60,10 +60,7 @@
                         </form>
                     </div>
                     <button id='button-form' type="button" class="btn btn-primary fw-bold">Entrar</button>
-                    <div id="cadastrar" class="d-flex justify-content-between w-100">
-                        <p>Não tem uma conta? <a href="#" class="fw-bold">Cadastrar-se</a></p>
-                        <a href="#">Esqueci minha senha</a>
-                    </div>
+                    <a href="index.html" class="">Voltar para o login</a>
                 </div>
             </div>
         </div>
