terminando tela de recuperar senha

--- a/index2.html
+++ b/index2.html
@@ -38,21 +38,23 @@
                     <div class="d-flex justify-content-center py-5">
                         <img src="assets/img/logo.svg">
                     </div>
-                    <div id="bloco-login"
-                        class="d-flex align-items-center justify-content-between ps-2 pe-2 aling-self-center">
+                    <div id="bloco-login" class="d-flex align-items-center justify-content-between ps-2 pe-2">
                         <div id="façalogin">
-                            <h1 class='pb-3'>Faça Login</h1>
+                            <h1 class='pb-3'>Alterar Senha</h1>
                             <div class='barra-azul'></div>
-                            <p>Para acessar o seu painel</p>
+                            <p>Alteração de senha através do e-mail.</p>
                         </div>
-                        <div id='seta'
-                            class="d-flex justify-content-center align-items-center bg-dark rounded-circle text-white fs-1">
+                        <div id='seta' class="d-flex justify-content-center align-items-center bg-dark rounded-circle text-white fs-1">
                             >
                         </div>
                     </div>
                 </div>
                 <div id="informacoes-login" class='col-4 offset-1 d-flex gap-4 flex-column justify-content-center'>
-
+                    <div>
+                        <h4 class="fw-bold border-bottom border-light-subtle pb-3">Esqueceu a sua senha?</h4>
+                        <p>Não se preocupe. Vamos ajudar você a recuperá-la. 
+                            Preencha o seu e-mail para continuar com a atualização.</p>
+                    </div>
                     <div id="informacao-email">
                         <p class="fw-medium" id="e-mail">E-mail</p>
                         <form action="get">
