--- a/index3.html
+++ b/index3.html
@@ -17,44 +17,45 @@
     
     <section>
         <div class="container">
-            <div class="row justify-content-center hhh">
+            <div class="row justify-content-center">
                 <div class='col-5 background'>
-                    <div class="d-flex justify-content-center pt-5">
+                    <div class="d-flex justify-content-center py-5">
                         <img src="assets/img/logo.svg">
                     </div>
                     <div id="bloco-login" class="d-flex align-items-center justify-content-between ps-2 pe-2">
                         <div id="façalogin">
                             <h1 class='pb-3'>Alterar Senha</h1>
                             <div class='barra-azul'></div>
-                            <p>Alteração de senha através de link.</p>
+                            <p>Alteração de senha através do e-mail.</p>
                         </div>
                         <div id='seta' class="d-flex justify-content-center align-items-center bg-dark rounded-circle text-white fs-1">
-                            
+                            >
                         </div>
                     </div>
                 </div>
                 <div id="informacoes-login" class='col-4 offset-1 d-flex gap-4 flex-column justify-content-center'>
-                    <h2 class="border-bottom pb-3 fw-bold">Nova senha</h2>
-                    <p>Você deverá registrar uma nova senha para sua conta de atleta na plataforma de esportes da SEMADEC.</p>
                     <div id="informacao-email">
-                        <p class="fw-bold" id="e-mail">Senha</p>
+                        <p class="fw-medium" id="e-mail">E-mail</p>
                         <form action="get">
-                            <input class="w-100" type="text" placeholder="Digite a sua nova senha">
+                            <input class="w-100" type="text" placeholder="Digite o seu e-mail">
                         </form>
                     </div>
                     <div id="informacao-senha">
-                        <p class="fw-bold" id="senha">Repetição de senha</p>
+                        <p class="fw-medium" id="senha">Senha</p>
                         <form action="get">
-                            <input class="w-100" type="password" placeholder="Repita a sua nova senha">
+                            <input class="w-100" type="password" placeholder="Digite sua senha">
+                            <img id="olho" src="assets/img/olho.svg">
                         </form>
                     </div>
-                    <button id='button-form' type="button" class="btn btn-primary fw-bold">Alterar</button>
-                    <div>
-                        <a href="#">Voltar ao login</a>
+                    <button id='button-form' type="button" class="btn btn-primary fw-bold">Entrar</button>
+                    <div id="cadastrar" class="d-flex justify-content-between w-100">
+                        <p>Não tem uma conta? <a href="#" class="fw-bold">Cadastrar-se</a></p>
+                        <a href="#">Esqueci minha senha</a>
                     </div>
                 </div>
             </div>
         </div>
     </section>
+
 </body>
 </html> 
