alterando algumas coisinhas

--- a/index.html
+++ b/index.html
@@ -38,35 +38,44 @@
                     <div class="d-flex justify-content-center py-5">
                         <img src="assets/img/logo.svg">
                     </div>
-                    <div id="bloco-login" class="d-flex align-items-center justify-content-between ps-2 pe-2">
+                    <div id="bloco-login"
+                        class="d-flex align-items-center justify-content-between ps-2 pe-2 aling-self-center">
                         <div id="façalogin">
-                            <h1 class='pb-3'>Alterar Senha</h1>
+                            <h1 class='pb-3'>Faça Login</h1>
                             <div class='barra-azul'></div>
-                            <p>Alteração de senha através do e-mail.</p>
+                            <p>Para acessar o seu painel</p>
                         </div>
-                        <div id='seta' class="d-flex justify-content-center align-items-center bg-dark rounded-circle text-white fs-1">
+                        <div id='seta'
+                            class="d-flex justify-content-center align-items-center bg-dark rounded-circle text-white fs-1">
                             >
                         </div>
                     </div>
                 </div>
                 <div id="informacoes-login" class='col-4 offset-1 d-flex gap-4 flex-column justify-content-center'>
-                    <div>
-                        <h4 class="fw-bold border-bottom border-light-subtle pb-3">Esqueceu a sua senha?</h4>
-                        <p>Não se preocupe. Vamos ajudar você a recuperá-la. 
-                            Preencha o seu e-mail para continuar com a atualização.</p>
-                    </div>
                     <div id="informacao-email">
                         <p class="fw-medium" id="e-mail">E-mail</p>
                         <form action="get">
                             <input class="w-100" type="text" placeholder="Digite o seu e-mail">
                         </form>
                     </div>
+                    <div id="informacao-senha">
+                        <p class="fw-medium" id="senha">Senha</p>
+                        <form action="get" class="senha">
+                            <input class="w-100" type="password" placeholder="Digite sua senha">
+                            <i class="bi bi-eye-slash fs-5"></i>
+                        </form>
+                    </div>
                     <button id='button-form' type="button" class="btn btn-primary fw-bold">Entrar</button>
-                    <a href="index.html" class="">Voltar para o login</a>
+                    <div id="cadastrar" class="d-flex justify-content-between w-100">
+                        <p>Não tem uma conta? <a href="#" class="fw-bold">Cadastrar-se</a></p>
+                        <a href="index2.html">Esqueci minha senha</a>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
+
+
 </body>
 
 </html>
