--- a/index2.html
+++ b/index2.html
@@ -58,7 +58,7 @@
                     <div id="informacao-email">
                         <p class="fw-medium" id="e-mail">E-mail</p>
                         <form action="get">
-                            <input class="w-100" type="text" placeholder="Digite o seu e-mail">
+                            <input class="w-100" type="email" placeholder="Digite o seu e-mail">
                         </form>
                     </div>
                     <button id='button-form' type="button" class="btn btn-primary fw-bold">Entrar</button>
