--- a/index3.html
+++ b/index3.html
@@ -50,7 +50,7 @@
                     </div>
                     <button id='button-form' type="button" class="btn btn-primary fw-bold">Alterar</button>
                     <div>
-                        <a href="#">Voltar ao login</a>
+                        <a href="index.html">Voltar ao login</a>
                     </div>
                 </div>
             </div>
