Finalizando e corrigindo atividade

--- a/index4.html
+++ b/index4.html
@@ -32,26 +32,11 @@
                             >
                         </div>
                     </div>
-                </div>
-                <div id="informacoes-login" class='col-4 offset-1 d-flex gap-4 flex-column justify-content-center'>
-                    <div id="informacao-email">
-                        <p class="fw-medium" id="e-mail">E-mail</p>
-                        <form action="get">
-                            <input class="w-100" type="text" placeholder="Digite o seu e-mail">
-                        </form>
                     </div>
-                    <div id="informacao-senha">
-                        <p class="fw-medium" id="senha">Senha</p>
-                        <form action="get">
-                            <input class="w-100" type="password" placeholder="Digite sua senha">
-                            <img id="olho" src="assets/img/olho.svg">
-                        </form>
-                    </div>
-                    <button id='button-form' type="button" class="btn btn-primary fw-bold">Entrar</button>
-                    <div id="cadastrar" class="d-flex justify-content-between w-100">
-                        <p>Não tem uma conta? <a href="#" class="fw-bold">Cadastrar-se</a></p>
-                        <a href="#">Esqueci minha senha</a>
-                    </div>
+                <div id="informacoes-login" class='col-4 offset-1 d-flex gap-2 flex-column justify-content-center'>
+                    <h2 class="border-bottom pb-3 fs-3 fw-bold" id="e-mail">Link Enviado!</h2>
+                    <p>Enviamos um link no seu e-mail cadastrado para você redefinir a sua senha e acessar a sua conta.</p>
+                    <a href="index.html">Voltar ao login</a>
                 </div>
             </div>
         </div>
