--- a/index5.html
+++ b/index5.html
@@ -17,25 +17,29 @@
     
     <section>
         <div class="container">
-            <div class="row justify-content-center">
+            <div class="row justify-content-center hhh">
                 <div class='col-5 background'>
-                    <div class="d-flex justify-content-center py-5">
+                    <div class="d-flex justify-content-center pt-5">
                         <img src="assets/img/logo.svg">
                     </div>
                     <div id="bloco-login" class="d-flex align-items-center justify-content-between ps-2 pe-2">
                         <div id="façalogin">
-                            <h1 class='pb-3'>Faça Login</h1>
+                            <h1 class='pb-3'>Alterar Senha</h1>
                             <div class='barra-azul'></div>
-                            <p>Para acessar o seu painel</p>
+                            <p>Alteração de senha através de link.</p>
                         </div>
                         <div id='seta' class="d-flex justify-content-center align-items-center bg-dark rounded-circle text-white fs-1">
                             >
                         </div>
                     </div>
                 </div>
+                <div id="informacoes-login" class='col-4 offset-1 d-flex gap-2 flex-column justify-content-center'>
+                    <h2 class="border-bottom pb-3 fs-3 fw-bold" id="e-mail">Senha alterada com sucesso</h2>
+                    <p>Acesse o link abaixo para acessar o painel do atleta.</p>
+                    <a href="index.html">Voltar ao login</a>
+                </div>
             </div>
         </div>
     </section>
-
 </body>
 </html> 
