--- a/index3.html
+++ b/index3.html
@@ -29,13 +29,13 @@
                             <p>Alteração de senha através de link.</p>
                         </div>
                         <div id='seta' class="d-flex justify-content-center align-items-center bg-dark rounded-circle text-white fs-1">
-                            
+                            >
                         </div>
                     </div>
                 </div>
                 <div id="informacoes-login" class='col-4 offset-1 d-flex gap-4 flex-column justify-content-center'>
-                    <h2 class="border-bottom pb-3 fw-bold">Nova senha</h2>
-                    <p>Você deverá registrar uma nova senha para sua conta de atleta na plataforma de esportes da SEMADEC.</p>
+                    <h2 class="border-bottom pb-3 fs-3 fw-bold mb-0">Nova senha</h2>
+                    <p class='mb-0'>Você deverá registrar uma nova senha para sua conta de atleta na plataforma de esportes da SEMADEC.</p>
                     <div id="informacao-email">
                         <p class="fw-bold" id="e-mail">Senha</p>
                         <form action="get">
