--- a/index4.html
+++ b/index4.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,14 +8,20 @@
     <title>Tela de Login</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Poppins:wght@400;700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Lilita+One&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Poppins:wght@400;700&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
-    
+
     <section>
         <div class="container">
             <div class="row justify-content-center">
@@ -28,14 +35,16 @@
                             <div class='barra-azul'></div>
                             <p>Alteração de senha através do e-mail.</p>
                         </div>
-                        <div id='seta' class="d-flex justify-content-center align-items-center bg-dark rounded-circle text-white fs-1">
+                        <div id='seta'
+                            class="d-flex justify-content-center align-items-center bg-dark rounded-circle text-white fs-1">
                             >
                         </div>
                     </div>
-                    </div>
+                </div>
                 <div id="informacoes-login" class='col-4 offset-1 d-flex gap-2 flex-column justify-content-center'>
                     <h2 class="border-bottom pb-3 fs-3 fw-bold" id="e-mail">Link Enviado!</h2>
-                    <p>Enviamos um link no seu e-mail cadastrado para você redefinir a sua senha e acessar a sua conta.</p>
+                    <p>Enviamos um link no seu e-mail cadastrado para você redefinir a sua senha e acessar a sua conta.
+                    </p>
                     <a href="index.html">Voltar ao login</a>
                 </div>
             </div>
@@ -43,4 +52,5 @@
     </section>
 
 </body>
-</html> 
+
+</html>
