--- a/index.html
+++ b/index.html
@@ -29,6 +29,35 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    
+    <section>
+        <div class="row">
+            <div class="col-2">
+                <div class="nav d-flex flex-column">
+                    <div class="topo d-flex justify-content-between">
+                        <img src="assets/img/awe-logo.svg" alt="">
+                        <i class="bi bi-list"></i>
+                    </div>
+                    <div class="options d-flex flex-column gap-4">
+                        <div class="dashboard d-flex align-items-center gap-2">
+                            <i class="bi bi-house-door"></i>
+                            <a href="#" class="link-underline link-underline-opacity-0">Dashboard</a>
+                        </div>
+                        <div class="modalidades d-flex align-items-center gap-2">
+                            <i class="bi bi-star"></i>
+                            <a href="#" class="link-underline link-underline-opacity-0">Modalidades</a>
+                        </div>
+                        <div class="borda border-bottom"></div>
+                        <div class="log-out d-flex align-items-center gap-2">
+                            <i class="bi bi-box-arrow-right"></i>
+                            <a href="#" class="link-danger link-underline link-underline-opacity-0">Sair</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+
+        </div>
+    </section>
 </body>
 </html>
