--- a/index4.html
+++ b/index4.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="h-100">
 
 <head>
     <meta charset="UTF-8">
@@ -28,32 +28,70 @@
     <!-- css do projeto -->
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
-<body>
-    <div class="container">
-        <div class="d-flex flex-column gap-3">
-            <div class="d-flex gap-2 mt-3">
-                <a id="home" class="link-underline link-underline-opacity-0" href="#">Perfil</a>
-                <img src="assets/img/icon.svg">
-                <p>Alterar Senha</p>
+
+<body class="h-100">
+    <section class="h-100 d-flex">
+        <div class="col-2 d-flex flex-column justify-content-between h-100 padeiro">
+            <div class="nav d-flex flex-column">
+                <div class="topo d-flex justify-content-between pb-5">
+                    <img src="assets/img/awe-logo.svg" alt="">
+                    <i class="bi bi-list ms-5"></i>
+                </div>
+                <div class="options d-flex flex-column gap-4">
+                    <div class="dashboard d-flex align-items-center gap-2">
+                        <i class="bi bi-house-door"></i>
+                        <a href="#" class="link-underline link-underline-opacity-0">Dashboard</a>
+                    </div>
+                    <div class="modalidades d-flex align-items-center gap-2">
+                        <i class="bi bi-star"></i>
+                        <a href="#" class="link-underline link-underline-opacity-0">Modalidades</a>
+                    </div>
+                    <div class="borda border-bottom"></div>
+                    <div class="log-out d-flex align-items-center gap-2">
+                        <i class="bi bi-box-arrow-right"></i>
+                        <a href="#" class="link-danger link-underline link-underline-opacity-0">Sair</a>
+                    </div>
+                </div>
             </div>
-            <h3 class="pb-2 border-bottom">Alterar de Senha</h3>
+            <div class="profile d-flex gap-2">
+                <i class="bi bi-person-circle fs-3"></i>
+                <div class="pessoa">
+                    <p>Jr Programador</p>
+                    <p>Atleta</p>
+                </div>
+            </div>
         </div>
-        <form class="d-flex flex-column pt-3 mt-4 pb-5 gap-4 border-bottom">
-            <p>Use o formulário a seguir para alterar a senha.</p>
-            <div>
-                <p>Senha atual:</p>
-                <input class="form-control" placeholder="Digite sua senha atual" type="text">
+        <div class="col-10">
+            <div class="container d-flex">
+                <div class="row">
+                    <div class="d-flex flex-column gap-3">
+                        <div class="d-flex gap-2 mt-3">
+                            <a id="home" class="link-underline link-underline-opacity-0" href="#">Perfil</a>
+                            <img src="assets/img/icon.svg">
+                            <p>Alterar Senha</p>
+                        </div>
+                        <h3 class="pb-2 border-bottom">Alterar de Senha</h3>
+                    </div>
+                    <form class="d-flex flex-column pt-3 mt-4 pb-5 gap-4 border-bottom">
+                        <p>Use o formulário a seguir para alterar a senha.</p>
+                        <div>
+                            <p>Senha atual:</p>
+                            <input class="form-control" placeholder="Digite sua senha atual" type="text">
+                        </div>
+                        <div>
+                            <p>Nova senha:</p>
+                            <input class="form-control" placeholder="Digite sua nova senha" type="text">
+                        </div>
+                        <div>
+                            <p>Repita a nova senha:</p>
+                            <input class="form-control" placeholder="Reinsira sua nova senha" type="text">
+                        </div>
+                    </form>
+                    <button id="button" class="btn btn-primary mt-4">Salvar alterações</button>
+                </div>
             </div>
-            <div>
-                <p>Nova senha:</p>
-                <input class="form-control" placeholder="Digite sua nova senha" type="text">
-            </div>
-            <div>
-                <p>Repita a nova senha:</p>
-                <input class="form-control" placeholder="Reinsira sua nova senha" type="text">
-            </div>
-        </form>
-        <button id="button" class="btn btn-primary mt-4">Salvar alterações</button>
-    </div>
+        </div>
+    </section>
 </body>
+
 </html>
