--- a/index4.html
+++ b/index4.html
@@ -34,7 +34,7 @@
         <div class="col-2 d-flex flex-column justify-content-between h-100 padeiro">
             <div class="nav d-flex flex-column">
                 <div class="topo d-flex justify-content-between pb-5">
-                    <img src="assets/img/awe-logo.svg" alt="">
+                    <img src="assets/img/awe-logo.svg">
                     <i class="bi bi-list ms-5"></i>
                 </div>
                 <div class="options d-flex flex-column gap-4">
@@ -62,9 +62,9 @@
             </div>
         </div>
         <div class="col-10">
-            <div class="container d-flex">
+            <div id="cont-index-4" class="container justify-content-center d-flex">
                 <div class="row">
-                    <div class="d-flex flex-column gap-3">
+                    <div id="label" class="d-flex flex-column gap-3">
                         <div class="d-flex gap-2 mt-3">
                             <a id="home" class="link-underline link-underline-opacity-0" href="#">Perfil</a>
                             <img src="assets/img/icon.svg">
@@ -72,7 +72,7 @@
                         </div>
                         <h3 class="pb-2 border-bottom">Alterar de Senha</h3>
                     </div>
-                    <form class="d-flex flex-column pt-3 mt-4 pb-5 gap-4 border-bottom">
+                    <form id="form-p" class="d-flex flex-column pt-3 mt-4 pb-5 gap-4 border-bottom">
                         <p>Use o formulário a seguir para alterar a senha.</p>
                         <div>
                             <p>Senha atual:</p>
