alterando as classes nos outros arquivos  para adicionar o hover

--- a/index4.html
+++ b/index4.html
@@ -35,25 +35,25 @@
             <div class="nav d-flex flex-column">
                 <div class="topo d-flex justify-content-between pb-5">
                     <img src="assets/img/awe-logo.svg">
-                    <i class="bi bi-list ms-5"></i>
+                    <i class="bi bi-list ms-5 hover"></i>
                 </div>
                 <div class="options d-flex flex-column gap-4">
                     <div class="dashboard d-flex align-items-center gap-2">
-                        <i class="bi bi-house-door"></i>
+                        <i class="bi bi-house-door hover"></i>
                         <a href="#" class="link-underline link-underline-opacity-0">Dashboard</a>
                     </div>
                     <div class="modalidades d-flex align-items-center gap-2">
-                        <i class="bi bi-star"></i>
+                        <i class="bi bi-star hover"></i>
                         <a href="#" class="link-underline link-underline-opacity-0">Modalidades</a>
                     </div>
                     <div class="borda border-bottom"></div>
                     <div class="log-out d-flex align-items-center gap-2">
-                        <i class="bi bi-box-arrow-right"></i>
+                        <i class="bi bi-box-arrow-right hover"></i>
                         <a href="#" class="link-danger link-underline link-underline-opacity-0">Sair</a>
                     </div>
                 </div>
             </div>
-            <div class="profile d-flex gap-2">
+            <div class="profile d-flex gap-2 hover">
                 <i class="bi bi-person-circle fs-3"></i>
                 <div class="pessoa">
                     <p>Jr Programador</p>
