apagando arquivos e preparando meu index

--- a/index2.html
+++ b/index2.html
@@ -29,8 +29,8 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
-<body class="h-100">
-    <section class="h-100">
+<body class="h-100 gambiarra">
+    <section class="h-100 row">
         <div class="col-2 d-flex flex-column justify-content-between h-100 padeiro">
             <div class="nav d-flex flex-column">
                 <div class="topo d-flex justify-content-between pb-5">
@@ -58,6 +58,47 @@
                 <div class="pessoa">
                     <p>Jr Programador</p>
                     <p>Atleta</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-10">
+            <div class="container">
+                <div class="row">
+                    <div class='d-flex flex-column gap-5'>
+                        <div class='d-flex flex-column border-bottom'>
+                            <p class='fs-5 pb-1'>Perfil</p>
+                            <h3>Edição de perfil</h3>
+                        </div>
+                        <div>
+                            <div id="perfil-esquerda" class='d-flex flex-column gap-4'>
+                                <div id='Jr' class='card p-1 mt-2'>
+                                    <img class="card-img-top align-self-center pb-2 pt-4" src="assets/img/Ellipse 8.svg">
+                                    <div class="card-body">
+                                        <h4 class="card-text text-center">Jr Programador da Silva</h4>
+                                    </div>
+                                </div>
+                                <div id='botoes-perfil' class='d-flex flex-column gap-2'>
+                                    <button type="button"
+                                        class='w-100 btn btn-primary d-flex align-items-center justify-content-center gap-1 fs-4 fw-bold p-2'>
+                                        <img src="assets/img/icon.svg" alt="">
+                                        Editar perfil
+                                    </button>
+                                    <button id='alterar' type="button"
+                                        class='w-100 btn d-flex align-items-center justify-content-center gap-1 fs-4 fw-bold p-2'>
+                                        <img src="assets/img/cadeado.svg" alt="">
+                                        Alterar senha
+                                    </button>
+                                    <button id='excluir' type="button"
+                                        class='w-100 btn d-flex align-items-center justify-content-center gap-1 fs-4 fw-bold p-2'>
+                                        <img src="assets/img/lixo.svg" alt="">
+                                        Excluir senha
+                                    </button>
+                                </div>
+                            </div>
+                            <div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
