mudando a foto da parte de murilo pq ele é bobao

--- a/index3.html
+++ b/index3.html
@@ -71,7 +71,7 @@
                     <div class="row gap-3">
                         <div id="perfil-esquerda" class='col-2 d-flex flex-column gap-4'>
                             <div id='Jr' class='card p-1'>
-                                <img class="card-img-top align-self-center pb-2 pt-4" src="assets/img/Ellipse 8.svg">
+                                <img class="card-img-top align-self-center pb-2 pt-4" src="assets/img/Group 53761.png">
                                 <div class="card-body">
                                     <p class="card-text text-center fw-bold">Jr Programador da Silva</p>
                                 </div>
