--- a/index4.html
+++ b/index4.html
@@ -61,7 +61,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-10">
+        <div class="col-10 mt-2">
             <div id="cont-index-4" class="container justify-content-center d-flex">
                 <div class="row">
                     <div id="label" class="d-flex flex-column gap-3">
@@ -70,21 +70,21 @@
                             <img src="assets/img/icon.svg">
                             <p>Alterar Senha</p>
                         </div>
-                        <h3 class="pb-2 border-bottom">Alterar de Senha</h3>
+                        <h5 class="pb-2 fw-bold border-bottom">Alterar de Senha</h5>
                     </div>
                     <form id="form-p" class="d-flex flex-column pt-3 mt-4 pb-5 gap-4 border-bottom">
                         <p>Use o formulário a seguir para alterar a senha.</p>
                         <div>
                             <p>Senha atual:</p>
-                            <input class="form-control" placeholder="Digite sua senha atual" type="text">
+                            <input id="input-t4" class="form-control" placeholder="Digite sua senha atual" type="text">
                         </div>
                         <div>
                             <p>Nova senha:</p>
-                            <input class="form-control" placeholder="Digite sua nova senha" type="text">
+                            <input id="input-t4" class="form-control" placeholder="Digite sua nova senha" type="text">
                         </div>
                         <div>
                             <p>Repita a nova senha:</p>
-                            <input class="form-control" placeholder="Reinsira sua nova senha" type="text">
+                            <input id="input-t4" class="form-control" placeholder="Reinsira sua nova senha" type="text">
                         </div>
                     </form>
                     <button id="button" class="btn btn-primary mt-4">Salvar alterações</button>
