Adicionando brach da nova tarefa

--- a/indexmodalides2.html
+++ b/indexmodalides2.html
@@ -18,20 +18,22 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Poppins:wght@400;700&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Poppins:wght@400;600;700&display=swap"
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lilita+One&display=swap" rel="stylesheet">
     <link
-        href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Poppins:wght@400;700&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Poppins:wght@400;600;700&display=swap"
         rel="stylesheet">
 
     <!-- css do projeto -->
     <link rel="stylesheet" href="assets/css/style.css">
+
+    
 </head>
 
-<body class="h-100">
-    <section class="tudo h-100 d-flex gap-5">
-        <div class="me-5 col-2 d-flex flex-column justify-content-between h-100 padeiro border-end">
+<body class="h-100 gambiarra">
+    <section class="h-100 row">
+        <div class="col-2 d-flex flex-column justify-content-between h-100 padeiro border-end">
             <div class="nav d-flex flex-column">
                 <div class="topo d-flex justify-content-between pb-5">
                     <img src="assets/img/awe-logo.svg" alt="">
@@ -55,41 +57,9 @@
             </div>
             <div class="profile d-flex gap-2 hover">
                 <i class="bi bi-person-circle fs-3"></i>
-                <div class="pessoa w-100">
+                <div class="pessoa">
                     <p>Jr Programador</p>
                     <p>Atleta</p>
-                </div>
-            </div>
-        </div>
-        <div class="container pt-5 ps-5 ms-5">
-            <h5 class="fw-semibold pb-3">Suas inscrições</h5>
-            <div class="modalidades d-flex flex-column gap-4">
-                <div class="volei d-flex flex-column gap-4 border border-secondary-subtle rounded p-3">
-                    <div class="d-flex align-items-center gap-2">
-                        <p class="nome-mod fw-semibold">Vôlei de Quadra</p>
-                        <div class="confirmado d-flex justify-content-center">
-                            <span class="confirmacao me-2 badge rounded-pill text-bg-success fw-bold">Confirmado</span>
-                        </div>
-                        <div class="img bg-dark d-flex justify-content-center align-items-center rounded-circle">
-                            <img src="assets/img/volleyball.svg" alt="">
-                        </div>  
-                    </div>
-                    <button class="detalhes btn btn-outline-secondary fw-semibold p-0">Detalhes</button>
-                </div>
-                <div class="futebol d-flex flex-column gap-4 border border-secondary-subtle rounded p-3">
-                    <div class="d-flex align-items-center gap-3">
-                        <p class="nome-mod fw-semibold">Futebol Society</p>
-                        <div class="a-pagar d-flex justify-content-center rounded-pill me-2">
-                            <span class="confirmacao badge fw-bold">A pagar</span>
-                        </div>
-                        <div class="img bg-dark d-flex justify-content-center align-items-center rounded-circle">
-                            <img src="assets/img/maki_soccer.svg" alt="">
-                        </div>  
-                    </div>
-                    <div class="botoes d-flex gap-2">
-                        <button class="detalhes btn btn-outline-secondary fw-semibold p-0">Detalhes</button>
-                        <button class=" btn btn-primary fw-semibold">Efetuar Pagamento</button>
-                    </div>
                 </div>
             </div>
         </div>
