--- a/indexmodalides.html
+++ b/indexmodalides.html
@@ -30,11 +30,11 @@
 </head>
 
 <body class="h-100">
-    <section class="h-100 d-flex">
-        <div class="col-2 d-flex flex-column justify-content-between h-100 padeiro border-end">
+    <section class="tudo h-100 d-flex gap-5">
+        <div class="me-5 col-2 d-flex flex-column justify-content-between h-100 padeiro border-end">
             <div class="nav d-flex flex-column">
                 <div class="topo d-flex justify-content-between pb-5">
-                    <img src="assets/img/awe-logo.svg">
+                    <img src="assets/img/awe-logo.svg" alt="">
                     <i class="bi bi-list ms-5 hover"></i>
                 </div>
                 <div class="options d-flex flex-column gap-4">
@@ -55,39 +55,9 @@
             </div>
             <div class="profile d-flex gap-2 hover">
                 <i class="bi bi-person-circle fs-3"></i>
-                <div class="pessoa">
+                <div class="pessoa w-100">
                     <p>Jr Programador</p>
                     <p>Atleta</p>
-                </div>
-            </div>
-        </div>
-        <div class="col-10">
-            <div id="cont-index-4" class="container justify-content-center d-flex">
-                <div class="row">
-                    <div id="label" class="d-flex flex-column gap-3">
-                        <div class="d-flex gap-2 mt-3">
-                            <a id="home" class="link-underline link-underline-opacity-0" href="#">Perfil</a>
-                            <img src="assets/img/icon.svg">
-                            <p>Alterar Senha</p>
-                        </div>
-                        <h3 class="pb-2 border-bottom">Alterar de Senha</h3>
-                    </div>
-                    <form id="form-p" class="d-flex flex-column pt-3 mt-4 pb-5 gap-4 border-bottom">
-                        <p>Use o formulário a seguir para alterar a senha.</p>
-                        <div>
-                            <p>Senha atual:</p>
-                            <input class="form-control" placeholder="Digite sua senha atual" type="text">
-                        </div>
-                        <div>
-                            <p>Nova senha:</p>
-                            <input class="form-control" placeholder="Digite sua nova senha" type="text">
-                        </div>
-                        <div>
-                            <p>Repita a nova senha:</p>
-                            <input class="form-control" placeholder="Reinsira sua nova senha" type="text">
-                        </div>
-                    </form>
-                    <button id="button" class="btn btn-primary mt-4">Salvar alterações</button>
                 </div>
             </div>
         </div>
