Mandando o resto das alterações

--- a/indexmodalides2.html
+++ b/indexmodalides2.html
@@ -63,6 +63,44 @@
                 </div>
             </div>
         </div>
+        <div class="col-10 mt-2">
+            <div class="container padeiro">
+                <div id="label" class="d-flex flex-column gap-3 mb-2">
+                    <div class="d-flex gap-2">
+                        <a id="home" class="link-underline link-underline-opacity-0" href="#">Modalidades</a>
+                        <img src="assets/img/icon.svg">
+                        <p>Detalhamento da modalidade</p>
+                    </div>
+                    <h5 class="pb-2 fw-bold border-bottom">Natação</h5>
+                </div>
+                <section class="d-flex gap-3 mt-3">
+                    <div id="modal" class="card d-flex flex-column gap-3 border p-2">
+                        <figure class="pb-3 d-flex justify-content-center border-bottom w-100 align-items-center"><img src="assets/img/sport.svg"></figure>
+                        <div>
+                            <p>Tipo</p>
+                            <small id="tipo">Individual</small>
+                        </div>
+                        <div>
+                            <p>Inscrições</p>
+                            <small>0 Atletas</small>
+                        </div>
+                        <a id="link-card" class="pt-3 border-top" href="#">Exibir categorias</a>
+                    </div>
+                    <div class="card border w-100">
+                        <div class="p-2 bg-body-tertiary rounded-top">
+                            <p class="fw-semibold">Inscrições</p>
+                        </div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                    </div>
+                </section>
+            </div>
+        </div>
     </section>
 </body>
 
